<resources>
    <string name="app_name">month4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="enter_number">Enter number:</string>
    <string name="desc">Desc</string>
    <string name="skip">skip</string>
    <string name="get_start">Get start</string>
    <string name="exit">Exit</string>
    <string name="save">SAve</string>
    <string name="username">Username</string>
    <string name="click">Click</string>
</resources>