<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.month4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_onBoardingFragment2"
            app:destination="@id/onBoardingFragment"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.month4.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.month4.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.month4.ui.task.TaskFragment"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/navigation_img"
        android:name="com.example.month4.ui.image.ImageFragment"
        android:label="fragment_image"
        tools:layout="@layout/fragment_image" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.month4.ui.onBoard.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" >
        <action
            android:id="@+id/action_onBoardingFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.month4.ui.auth.AuthFragment"
        android:label="Auth"
        tools:layout="@layout/fragment_auth" />
</navigation>